fix multicolumn CSS layout to have ellipsis and nowrap, thanks to @darkwing for CSS help!!

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -12,3 +12,9 @@
 	-webkit-columns: 15em;
 	columns: 15em;
 }
+
+.biglist-item {
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
